# generic-shared-memory-model

./: .gitignore  CMakeLists.txt  GenericSharedMemoryModel.hpp  README.md
test/: CMakeLists.txt  test_generic_shared_memory_model.cpp
